--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -17,6 +17,8 @@ stringData:
     SECRET_MAIL_PASSWORD: ENC[AES256_GCM,data:P7SsXrTW8anidGXfAe2EI7DD6QCKND1//RYZjcgCqiA=,iv:rAVmouPXjALSb1Rtnpb0jQuUSxUXDPclkAXqlisnTbg=,tag:sRAvoYnfcscODB2gcRMG5Q==,type:str]
     SECRET_MAIL_HOST: ENC[AES256_GCM,data:ynJwMCwXLQ6ScnNJ22SwYKI=,iv:sSVGVHHOoHhCvBhZORzevjom48OJhS3F3guJCPahp8w=,tag:dcv35A2hBkwvI1yV+maciw==,type:str]
     SECRET_MAIL_PORT: ENC[AES256_GCM,data:fFtj,iv:bZpLnHbHGNgDV9dxxb6p5lCnUYv9AA/TZgWr/XgOIHM=,tag:cADCsZUsoFRBAQQgzmnxFQ==,type:str]
+    SECRET_TOOLJET_MASTER_KEY: ENC[AES256_GCM,data:g/Cjxb1fyLxWIxDSmTjEMg0jJRKyayUndRAhua4fE6EuHtjLyiwLfSKQEEP/jBr1b5fbJAloY3sN/khVf+JaPw==,iv:N9pwSxEuW3u3qlmqAVDjnBqiP86O+jg/fvDdks5afUk=,tag:v7PbN/oJhOvcvEj41DdCVQ==,type:str]
+    SECRET_TOOLJET_KEY_BASE: ENC[AES256_GCM,data:p196Ydby7QZGGpWPtVjdcfo3JbfVmYo0wDCBoVcDl+rgK0V5mngCgL9qRyC6hsDCYfHNXfLhcNzsZEELlAUXIUBscRkjkdngCEG78xggz9/XTxrYwhTXiuQlBeVbGOCskfaBmZvPiOaiZ29CJk1F93RvHW+06ner+9/yfOZvQXI=,iv:3te3+b9lLt1JXLj63cNdsdhyvV9Izs26LVH9xYVMU/Y=,tag:NvB/sCrnICjs24GY0qjAqA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,8 +34,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-02T17:48:18Z"
-    mac: ENC[AES256_GCM,data:BLsIr7kGxfMEYhDwRcE29fNZfqHRFk/HtHTTyoGGvGToSX2JD4pEggSH/lpAdC45DtImcdtIqcMtNZHKtii2VugoDuaDlC/UJWFfbX6pvcFGjuJt/HmIJ2n16ZRrU/ZrWIqGeIkC6opOC5/MDsY1DGfuf6KnE0QxEg5ST2FFDoA=,iv:l0Swby6OcLh5b6vbO+vEPqiSCi7vaPE+f2EmcbxWRXE=,tag:zo3pLg5Ryk0StQLy3YDPsw==,type:str]
+    lastmodified: "2023-11-04T03:29:10Z"
+    mac: ENC[AES256_GCM,data:/ocBTxGJ0JHKu45dxjyio9rmsDTgG8QnFz7HZNOlqZ5eJKxdpwKtNLmBZkXeV+8GniY8qdrMT46VehYHK2hG+TQQGm/v+uSewmM+DYfMwkeMuIxeGbpX1WmNGKPTk3iV3BuydcUU4cPIkowuNTxMe3QiUkaHOiPTQzHpmgJVLtA=,iv:Tgy3yhsNBh4T2x4To8Cav3WfWOa6DzxPdhhay3uDW3c=,tag:GKaCHkltfWgl1/j0sms9+Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
