--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -35,3 +35,6 @@ kubernetes:
         k8s-10:
           ansible_user: debian
           ansible_host: 192.168.2.19
+        k8s-11:
+          ansible_user: debian
+          ansible_host: 192.168.2.20
