--- a/kubernetes/apps/database/cloudnative-pg/cluster/helmrelease.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/helmrelease.yaml
@@ -18,9 +18,9 @@ spec:
     storageClass: local-path
   superuserSecret:
     name: cloudnative-pg-secrets
-  # bootstrap:
-  #   recovery:
-  #     source: &previous-cluster postgres-backup #This must match backup.barmanObjectStore.serverName from previous backup
+  bootstrap:
+    recovery:
+      source: &previous-cluster postgres-v1 #This must match backup.barmanObjectStore.serverName from previous backup
   postgresql:
     parameters:
       max_connections: "600"
@@ -35,7 +35,7 @@ spec:
         maxParallel: 8
       destinationPath: &dest-path s3://cloudnative-pg/
       endpointURL: &endpoint-url http://minio.kube-system.svc.cluster.local:9000
-      serverName: postgres-v1 #This must increment when bootstrapping. You cannot have this be the same as the bootstrap version
+      serverName: postgres-v2 #This must increment when bootstrapping. You cannot have this be the same as the bootstrap version
       s3Credentials: &s3-creds
         accessKeyId:
           name: cloudnative-pg-secrets
@@ -45,7 +45,7 @@ spec:
           key: AWS_SECRET_ACCESS_KEY
   # Note: externalClusters is needed when recovering from an existing cnpg cluster
   externalClusters:
-    - name: postgres-v2
+    - name: postgres-v1
       barmanObjectStore:
         wal:
           compression: bzip2
