--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./cloudnative-pg/ks.yaml
   - ./couchdb/ks.yaml
   - ./mongodb/ks.yaml
+  - ./pgadmin/ks.yaml
   #- ./postgresql/ks.yaml
   - ./redis/ks.yaml
   - ./redisinsight/ks.yaml
