--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./cloudnative-pg/ks.yaml
+  #- ./cloudnative-pg/ks.yaml
   - ./couchdb/ks.yaml
   - ./mongodb/ks.yaml
   - ./pgadmin/ks.yaml
