--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -44,6 +44,7 @@ spec:
           - networking
           - media
           - kube-system
+          - rook-ceph
       globalBookmarks:
         - group: Daily
           bookmarks:
