--- a/ansible/playbooks/cluster-prepare.yaml
+++ b/ansible/playbooks/cluster-prepare.yaml
@@ -78,17 +78,17 @@
             dest: /etc/profile.d/neofetch.sh
             mode: "0755"
             content: neofetch --config none
-        - name: System Configuration | Disable swap
+                - name: System Configuration | Disable swap
           ansible.posix.mount:
             name: "{{ item }}"
             fstype: swap
             state: absent
           loop: ["none", "swap"]
-        # - name: System Configuration | Kernel modules (1)
-        #   community.general.modprobe:
-        #     name: "{{ item }}"
-        #     state: present
-        #   loop: ["br_netfilter", "ceph", "ip_vs", "ip_vs_rr", "nbd", "overlay", "rbd"]
+        - name: System Configuration | Kernel modules (1)
+          community.general.modprobe:
+            name: "{{ item }}"
+            state: present
+          loop: ["br_netfilter", "ceph", "ip_vs", "ip_vs_rr", "nbd", "overlay", "rbd"]
         - name: System Configuration | Kernel modules (2)
           ansible.builtin.copy:
             dest: "/etc/modules-load.d/{{ item }}.conf"
