--- a/ansible/playbooks/cluster-prepare.yaml
+++ b/ansible/playbooks/cluster-prepare.yaml
@@ -8,6 +8,8 @@
     - name: Pausing for 5 seconds...
       ansible.builtin.pause:
         seconds: 5
+    - name: Populate service facts
+      service_facts:
   tasks:
     - name: Locale
       block:
@@ -78,7 +80,13 @@
             dest: /etc/profile.d/neofetch.sh
             mode: "0755"
             content: neofetch --config none
-                - name: System Configuration | Disable swap
+        - name: System Configuration | Disable apparmor
+          when: ansible_facts.services['apparmor.service'] is defined
+          ansible.builtin.systemd:
+            name: apparmor
+            state: stopped
+            masked: true
+        - name: System Configuration | Disable swap
           ansible.posix.mount:
             name: "{{ item }}"
             fstype: swap
