--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -64,20 +64,16 @@ spec:
         config:
           osdsPerDevice: "1"
         nodes:
+          - name: aurora
+            devices:
+              - name: /dev/disk/by-id/ata-Samsung_SSD_870_EVO_2TB_S753NS0W819426L
           - name: k8s-01
             devices:
               - name: /dev/disk/by-id/usb-MEGAZ_USB_3.0_DD564198838A2-0:0
           - name: k8s-07
             devices:
               - name: /dev/disk/by-id/nvme-Samsung_SSD_980_PRO_1TB_S5P2NS0RB39752X
-          - name: k8s-10
-            devices:
-              - name: /dev/disk/by-id/nvme-Samsung_SSD_980_PRO_1TB_S5P2NS0RB39752X
     # enable log collector, daemons will log on files and rotate
-    logCollector:
-      enabled: true
-      periodicity: daily # one of: hourly, daily, weekly, monthly
-      maxLogSize: 500M # SUFFIX may be 'M' or 'G'. Must be at least 1M.
     cephBlockPools:
       - name: ceph-blockpool
         spec:
