--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -20,6 +20,9 @@ kubernetes:
         k8s-05:
           ansible_user: debian
           ansible_host: 192.168.2.14
+        k8s-08:
+          ansible_user: debian
+          ansible_host: 192.168.2.17
         aurora:
           ansible_user: debian
           ansible_host: 192.168.2.20
