--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -71,12 +71,10 @@ spec:
               - name: /dev/disk/by-id/ata-Samsung_SSD_870_EVO_2TB_S753NS0W819426L
           - name: k8s-01
             devices:
-              #- name: /dev/disk/by-id/usb-MEGAZ_USB_3.0_DD564198838A2-0:0
               - name: /dev/disk/by-id/usb-SABRENT_SABRENT_DB9876543214E-0:0
           - name: nuc11
             devices:
               - name: /dev/disk/by-id/nvme-Samsung_SSD_980_PRO_1TB_S5P2NS0RB39752X
-    # enable log collector, daemons will log on files and rotate
     cephBlockPools:
       - name: ceph-blockpool
         spec:
@@ -139,22 +137,22 @@ spec:
     cephObjectStores:
       - name: ceph-objectstore
         spec:
-          # metadataPool:
-          #   failureDomain: host
-          #   replicated:
-          #     size: 3
-          # dataPool:
-          #   failureDomain: host
-          #   erasureCoded:
-          #     dataChunks: 2
-          #     codingChunks: 1
           metadataPool:
+            failureDomain: host
             replicated:
-              size: 1
+              size: 3
           dataPool:
-            replicated:
-              size: 1
-          preservePoolsOnDelete: true
+            failureDomain: host
+            erasureCoded:
+              dataChunks: 2
+              codingChunks: 1
+          # metadataPool:
+          #   replicated:
+          #     size: 1
+          # dataPool:
+          #   replicated:
+          #     size: 1
+          preservePoolsOnDelete: false
           gateway:
             port: 80
             resources:
