--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -102,6 +102,14 @@ spec:
             editable: true
             options:
               path: /var/lib/grafana/dashboards/flux
+          - name: ceph
+            orgId: 1
+            folder: Ceph
+            type: file
+            disableDeletion: false
+            editable: true
+            options:
+              path: /var/lib/grafana/dashboards/ceph
           - name: kubernetes
             orgId: 1
             folder: Kubernetes
@@ -146,7 +154,7 @@ spec:
           gnetId: 17457 # https://grafana.com/grafana/dashboards/17457?tab=revisions
           revision: 6
           datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
+            - { name: Prometheus, value: Prometheus }
         external-dns:
           gnetId: 15038 # https://grafana.com/grafana/dashboards/15038?tab=revisions
           revision: 1
@@ -166,6 +174,25 @@ spec:
           gnetId: 763 # https://grafana.com/grafana/dashboards/763?tab=revisions
           revision: 5
           datasource: Prometheus
+        cloudnative-pg:
+          url: https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
+          datasource: Prometheus
+        ceph:
+          ceph-cluster:
+            # renovate: depName="Ceph Cluster"
+            gnetId: 2842
+            revision: 17
+            datasource: Prometheus
+          ceph-osd:
+            # renovate: depName="Ceph - OSD (Single)"
+            gnetId: 5336
+            revision: 9
+            datasource: Prometheus
+          ceph-pools:
+            # renovate: depName="Ceph - Pools"
+            gnetId: 5342
+            revision: 9
+            datasource: Prometheus
       flux:
         flux-cluster:
           url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/monitoring-config/dashboards/cluster.json
