plex external down

--- a/kubernetes/apps/networking/nginx/internal/kustomization.yaml
+++ b/kubernetes/apps/networking/nginx/internal/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 namespace: networking
 resources:
   - ./helmrelease.yaml
-  - ./plex.yaml
+  # - ./plex.yaml
   - ./proxmox.yaml
