rook-ceph rook mgr

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -56,6 +56,10 @@ spec:
           requireMsgr2: true
       crashCollector:
         disable: false
+      mgr:
+        modules:
+          - name: rook
+            enabled: true
       dashboard:
         enabled: true
         urlPrefix: /
