ceph discovery daemon

--- a/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -38,6 +38,6 @@ spec:
     monitoring:
       enabled: true
     # -- Enable discovery daemon
-    enableDiscoveryDaemon: false
+    enableDiscoveryDaemon: true
     # -- Set the discovery daemon device discovery interval (default to 60m)
     discoveryDaemonInterval: 60m
