snapshot controller up

--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   - ./minio/ks.yaml
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
-#  - ./snapshot-controller/ks.yaml
+  - ./snapshot-controller/ks.yaml
 
