--- a/kubernetes/apps/volsync/volsync/app/helmrelease.yaml
+++ b/kubernetes/apps/volsync/volsync/app/helmrelease.yaml
@@ -32,6 +32,8 @@ spec:
     manageCRDs: true
     metrics:
       disableAuth: true
+    nodeSelector:
+      beta.kubernetes.io/arch: amd64
   postRenderers:
     - kustomize:
         patchesStrategicMerge:
