--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -45,6 +45,7 @@ spec:
           - media
           - kube-system
           - rook-ceph
+          - storage
       globalBookmarks:
         - group: Daily
           bookmarks:
