--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -44,8 +44,7 @@ spec:
           - networking
           - media
           - kube-system
-          - rook-ceph
-          - storage
+          - longhorn-system
       globalBookmarks:
         - group: Daily
           bookmarks:
