--- a/kubernetes/apps/longhorn-system/longhorn-recurring-jobs/app/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-recurring-jobs/app/helmrelease.yaml
@@ -2,10 +2,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  namespace: storage
+  namespace: longhorn-system
   name: longhorn-recurring-jobs
 spec:
-  targetNamespace: storage
+  targetNamespace: longhorn-system
   releaseName: longhorn-recurring-jobs
   timeout: 120s
   chart:
