--- a/kubernetes/apps/longhorn-system/longhorn/ks.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-longhorn
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/storage/longhorn/app
+  path: ./kubernetes/apps/longhorn-system/longhorn/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -14,7 +14,7 @@ spec:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: longhorn
-      namespace: storage
+      namespace: longhorn-system
   wait: false # no flux ks dependents
   interval: 30m
   retryInterval: 1m
