--- a/kubernetes/apps/longhorn-system/namespace.yaml
+++ b/kubernetes/apps/longhorn-system/namespace.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: storage
+  name: longhorn-system
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
