--- a/.taskfiles/AnsibleTasks.yaml
+++ b/.taskfiles/AnsibleTasks.yaml
@@ -57,3 +57,8 @@ tasks:
     desc: nuke ceph drives
     dir: "{{.ANSIBLE_DIR}}"
     cmd: ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/hosts.yaml {{.ANSIBLE_PLAYBOOK_DIR}}/cluster-ceph-reset.yaml
+
+  longhorn-drives:
+    desc: longhorn-drives
+    dir: "{{.ANSIBLE_DIR}}"
+    cmd: ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/hosts.yaml {{.ANSIBLE_PLAYBOOK_DIR}}/longhorn-drives.yaml
