--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -102,14 +102,14 @@ spec:
             editable: true
             options:
               path: /var/lib/grafana/dashboards/flux
-          - name: ceph
-            orgId: 1
-            folder: Ceph
-            type: file
-            disableDeletion: false
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/ceph
+          # - name: ceph
+          #   orgId: 1
+          #   folder: Ceph
+          #   type: file
+          #   disableDeletion: false
+          #   editable: true
+          #   options:
+          #     path: /var/lib/grafana/dashboards/ceph
           - name: kubernetes
             orgId: 1
             folder: Kubernetes
@@ -177,22 +177,22 @@ spec:
         cloudnative-pg:
           url: https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
           datasource: Prometheus
-        ceph:
-          ceph-cluster:
-            # renovate: depName="Ceph Cluster"
-            gnetId: 2842  #https://grafana.com/grafana/dashboards/2842?tab=revisions
-            revision: 17
-            datasource: Prometheus
-          ceph-osd:
-            # renovate: depName="Ceph - OSD (Single)"
-            gnetId: 5336 #https://grafana.com/grafana/dashboards/5336?tab=revisions
-            revision: 9
-            datasource: Prometheus
-          ceph-pools:
-            # renovate: depName="Ceph - Pools"
-            gnetId: 5342
-            revision: 9
-            datasource: Prometheus
+        # ceph:
+        #   ceph-cluster:
+        #     # renovate: depName="Ceph Cluster"
+        #     gnetId: 2842  #https://grafana.com/grafana/dashboards/2842?tab=revisions
+        #     revision: 17
+        #     datasource: Prometheus
+        #   ceph-osd:
+        #     # renovate: depName="Ceph - OSD (Single)"
+        #     gnetId: 5336 #https://grafana.com/grafana/dashboards/5336?tab=revisions
+        #     revision: 9
+        #     datasource: Prometheus
+        #   ceph-pools:
+        #     # renovate: depName="Ceph - Pools"
+        #     gnetId: 5342
+        #     revision: 9
+        #     datasource: Prometheus
       flux:
         flux-cluster:
           url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/monitoring-config/dashboards/cluster.json
