--- a/kubernetes/apps/monitoring/thanos/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/thanos/app/helmrelease.yaml
@@ -28,8 +28,6 @@ spec:
   dependsOn:
     - name: local-path-provisioner
       namespace: kube-system
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
   values:
     image:
       registry: quay.io
@@ -38,6 +36,9 @@ spec:
     objstoreConfig:
       type: s3
       config:
+        bucket: thanos
+        endpoint: http://minio.kube-system.svc.cluster.local:9000
+        region: us-east-1
         insecure: true
     queryFrontend:
       enabled: true
@@ -70,14 +71,14 @@ spec:
       retentionResolution1h: 90d
       persistence:
         enabled: true
-        storageClass: local-path
+        storageClass: longhorn
         size: 10Gi
     storegateway:
       enabled: true
       replicaCount: 2
       persistence:
         enabled: true
-        storageClass: local-path
+        storageClass: longhorn
         size: 10Gi
     ruler:
       enabled: true
@@ -98,30 +99,18 @@ spec:
                   severity: critical
       persistence:
         enabled: true
-        storageClass: local-path
+        storageClass: longhorn
         size: 10Gi
     metrics:
       enabled: true
       serviceMonitor:
         enabled: true
   valuesFrom:
-    - targetPath: objstoreConfig.config.bucket
-      kind: ConfigMap
-      name: thanos-bucket-v2
-      valuesKey: BUCKET_NAME
-    - targetPath: objstoreConfig.config.endpoint
-      kind: ConfigMap
-      name: thanos-bucket-v2
-      valuesKey: BUCKET_HOST
-    - targetPath: objstoreConfig.config.region
-      kind: ConfigMap
-      name: thanos-bucket-v2
-      valuesKey: BUCKET_REGION
     - targetPath: objstoreConfig.config.access_key
       kind: Secret
-      name: thanos-bucket-v2
-      valuesKey: AWS_ACCESS_KEY_ID
+      name: thanos-secrets
+      valuesKey: access_key
     - targetPath: objstoreConfig.config.secret_key
       kind: Secret
-      name: thanos-bucket-v2
-      valuesKey: AWS_SECRET_ACCESS_KEY
+      name: thanos-secrets
+      valuesKey: secret_key
