--- a/kubernetes/apps/monitoring/thanos/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/thanos/app/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
       ingress:
         enabled: true
         ingressClassName: internal
-        hostname: &host thanos-query-frontend.${SECRET_DOMAIN}"
+        hostname: &host thanos-query-frontend.${SECRET_DOMAIN}
         tls: true
         extraTls:
           - hosts:
