--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -55,20 +55,20 @@ spec:
       #         resources:
       #           requests:
       #             storage: 1Gi
-    kube-state-metrics:
-      metricLabelsAllowlist:
-        - "deployments=[*]"
-        - "persistentvolumeclaims=[*]"
-        - "pods=[*]"
-      prometheus:
-        monitor:
-          enabled: true
-          relabelings:
-            - action: replace
-              sourceLabels: ["__meta_kubernetes_pod_node_name"]
-              regex: ^(.*)$
-              replacement: $1
-              targetLabel: kubernetes_node
+    # kube-state-metrics:
+    #   metricLabelsAllowlist:
+    #     - "deployments=[*]"
+    #     - "persistentvolumeclaims=[*]"
+    #     - "pods=[*]"
+    #   prometheus:
+    #     monitor:
+    #       enabled: true
+    #       relabelings:
+    #         - action: replace
+    #           sourceLabels: ["__meta_kubernetes_pod_node_name"]
+    #           regex: ^(.*)$
+    #           replacement: $1
+    #           targetLabel: kubernetes_node
     kubelet:
       enabled: true
       serviceMonitor:
@@ -142,7 +142,13 @@ spec:
         tls:
           - hosts:
               - *host
+      thanosService:
+        enabled: true
+      thanosServiceMonitor:
+        enabled: true
       prometheusSpec:
+        replicas: 2
+        replicaExternalLabelName: __replica__
         ruleSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
@@ -151,6 +157,16 @@ spec:
         enableAdminAPI: true
         walCompression: true
         retentionSize: 20GB
+        enableFeatures:
+          - auto-gomaxprocs
+          - memory-snapshot-on-shutdown
+          - new-service-discovery-manager
+        thanos:
+          image: quay.io/thanos/thanos:v0.32.5
+          objectStorageConfig:
+            existingSecret:
+              name: thanos-objstore-secret
+              key: objstore.yml
         storageSpec:
           volumeClaimTemplate:
             spec:
@@ -175,3 +191,5 @@ spec:
                 operator: In
                 values:
                   - amd64
+    kubeStateMetrics:
+      enabled: false
